test/org/midica/testfiles/failing/channel-if.midica
INCLUDE inc/instruments.midica

0 c /4 if=123
